Wayne's Wealth Project

--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,38 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Wayne's Wealth</title>
+  <link rel="stylesheet" href="./css/style.css">
+
+  <!-- ICONSCOUT CDN -->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
+
+  <!-- GOOGLE FONTS MONTSERRATE -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Testing</h1>
+  <!-- This is the body -->
+  <nav>
+    <div class="containerk nav__container">
+      <a href="inde.html">
+        <img src="./images/logo.jpg" alt="logo">
+      </a>
+      <ul class="nav__menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="learn.html">Learn</a></li>
+        <li><a href="features.html">Features</a></li>
+        <li><a href="stories.html">Stories</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="login.html">Sign-up/Log-in</a></li>
+      </ul>
+      <button id="open-menu-btn"><i class="uil uil-bars"></i></button>
+      <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
+    </div>
+  </nav>
 </body>
 
 </html>
