Created some Headers and Sections in home page

--- a/client/index.html
+++ b/client/index.html
@@ -21,11 +21,10 @@
   <!-- This is the body -->
   <nav>
     <div class="containerk nav__container">
-      <a href="inde.html">
-        <img src="./images/logo.jpg" alt="logo">
+      <a href="index.html">
+        <img class="logo" src="./images/logo.jpg" alt="logo">
       </a>
       <ul class="nav__menu">
-        <li><a href="index.html">Home</a></li>
         <li><a href="learn.html">Learn</a></li>
         <li><a href="features.html">Features</a></li>
         <li><a href="stories.html">Stories</a></li>
@@ -37,6 +36,61 @@
       <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
     </div>
   </nav>
+  <header>
+    <div class="container header__container">
+      <div class="header___left">
+        <h1> Welcome to Wayne's Wealth</h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          Blanditiis aspernatur placeat quia eos aperiam aliquam voluptate animi,
+          laudantium quas, aliquid mollitia, fugit amet reiciendis saepe obcaecati sed et? Culpa, molestiae.
+        </p>
+        <a href="learn.html" class="btn btn-primary">Get Started</a>
+        </div>
+        <div class="header__right">
+          <div class="header__right-image">
+            <img src="./images/Img2.jpeg" alt="Header.svg">
+          </div>
+        </div>
+    </div>
+  </header>
+  <section class="categories">
+    <div class="container categories__container">
+      <div class="categories__left">
+        <h1>Simplified & Easy Courses</h1>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, ea rem. Inventore quidem cum odit corrupti rem itaque, assumenda accusamus repellendus possimus sint rerum perspiciatis debitis non tempora necessitatibus ullam.
+        </p>
+      </div>
+      <div class="categories__right">
+        <article class="category">
+          <span class="category-icon"><i class="uil uil-brain"></i></span>
+          <h5>Right Mindset</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, repudiandae?
+          </p>
+        </article>
+
+        <article class="category">
+          <span class="category-icon"><i class="uil uil-brain"></i></span>
+          <h5>Right Psychology</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, repudiandae?
+          </p>
+        </article>
+
+        <article class="category">
+          <span class="category-icon"><svg version="1.1" width="24" height="32" viewBox="0 0 12 16" class="octicon octicon-flame" aria-hidden="true">
+            <use xlink:href="#flame" />
+          </svg></span>
+          <h5>Right Skills</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, repudiandae?
+          </p>
+        </article>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
