--- a/client/index.html
+++ b/client/index.html
@@ -15,12 +15,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/aae991a382.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <!-- This is the body -->
   <nav>
-    <div class="containerk nav__container">
+    <div class="container nav__container">
       <a href="index.html">
         <img class="logo" src="./images/logo.jpg" alt="logo">
       </a>
@@ -30,7 +31,7 @@
         <li><a href="stories.html">Stories</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a href="login.html">Sign-up/Log-in</a></li>
+        <li><a href="login.html">Sign-up</a></li>
       </ul>
       <button id="open-menu-btn"><i class="uil uil-bars"></i></button>
       <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
@@ -72,7 +73,7 @@
         </article>
 
         <article class="category">
-          <span class="category-icon"><i class="uil uil-brain"></i></span>
+          <span class="category-icon"><i class="fa-solid fa-head-side-virus"></i></span>
           <h5>Right Psychology</h5>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, repudiandae?
@@ -80,9 +81,7 @@
         </article>
 
         <article class="category">
-          <span class="category-icon"><svg version="1.1" width="24" height="32" viewBox="0 0 12 16" class="octicon octicon-flame" aria-hidden="true">
-            <use xlink:href="#flame" />
-          </svg></span>
+          <span class="category-icon"><i class="fa-solid fa-business-time"></i></span>
           <h5>Right Skills</h5>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, repudiandae?
