Wayne's Wealth Forex

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
   <nav>
     <div class="container nav__container">
       <a href="index.html">
-        <img class="logo" src="./images/logo.jpg" alt="logo">
+        <img class="logo" src="./images/logo-jpg.jpg" alt="logo">
       </a>
       <ul class="nav__menu">
         <li><a href="learn.html">Learn</a></li>
