--- a/client/about.html
+++ b/client/about.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wayne's Wealth (about)</title>
-</head>
-<body>
 
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Wayne's Wealth</title>
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/about.css">
+
+        <!-- ICONSCOUT CDN -->
+        <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
+
+        <!-- GOOGLE FONTS MONTSERRATE -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/aae991a382.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <nav>
+                <div class="container nav__container">
+                <a href="index.html">
+                    <img class="logo" src="./images/logo-jpg.jpg" alt="logo">
+                </a>
+                <ul class="nav__menu">
+                    <li><a href="learn.html">Learn</a></li>
+                    <li><a href="features.html">Features</a></li>
+                    <li><a href="stories.html">Stories</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a class="btn2" href="login.html"><p>Sign-up</p></a></li>
+                    <li><a class="abtn1" href="login.html"><p class="btn1 btn-primary1">Sign-up/Log-in</p></a></li>
+                </ul>
+                <button id="open-menu-btn"><i class="uil uil-bars"></i></button>
+                <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
+                </div>
+            </nav>
+            <header>
+                <div class="container">
+                    <div class="head">
+                        <h1>About Us</h1>
+                    </div>
+                    <div class="about__container">
+                        <div class="vision about">
+                            <h1>Our Vision</h1>
+                            <p>To become the centre of excellence in teaching and learning of profitable financial markets' trading</p>
+                        </div>
+                        <div class="mission about">
+                            <h1>Our Mission</h1>
+                            <p>To provide quality forex training and trading services required to be profitable on the financial markets</p>
+                        </div>
+                        <div class="goal about">
+                            <h1>Our Goal</h1>
+                            <p>Giving Financial Freedom to all through the financial markets.</p>
+                        </div>
+                </div>
+            </header>
+
+            <script src="./js/main.js"></script>
+    </body>
 </html>
