Added some testimonials and About to the main page

--- a/client/about.html
+++ b/client/about.html
@@ -37,7 +37,7 @@
                 <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
                 </div>
             </nav>
-            <header>
+            <section>
                 <div class="container">
                     <div class="head">
                         <h1>About Us</h1>
@@ -55,8 +55,9 @@
                             <h1>Our Goal</h1>
                             <p>Giving Financial Freedom to all through the financial markets.</p>
                         </div>
+                    </div>
                 </div>
-            </header>
+            </section>
 
             <script src="./js/main.js"></script>
     </body>
