--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wayne's Wealth</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/styles.css">
 
   <!-- ICONSCOUT CDN -->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
@@ -15,6 +15,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
+
+  <!-- FONTAWESOME ICONS -->
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
   <script src="https://kit.fontawesome.com/aae991a382.js" crossorigin="anonymous"></script>
 </head>
 
@@ -31,138 +35,252 @@
         <li><a href="stories.html">Stories</a></li>
         <li><a href="about.html">About Us</a></li>
         <li><a href="blog.html">Blog</a></li>
-        <li><a class="btn2" href="login.html"><p>Sign-up</p></a></li>
-        <li><a class="abtn1" href="login.html"><p class="btn1 btn-primary1">Sign-up/Log-in</p></a></li>
+        <li><a class="btn btn-primary" href="login.html"><p>Sign-up</p></a></li>
+        <li><a class="abtn1" href="login.html"><p class="btn1 btn-primary1">Sign-up / Log-in</p></a></li>
       </ul>
       <button id="open-menu-btn"><i class="uil uil-bars"></i></button>
       <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
     </div>
   </nav>
-  <header>
-    <div class="container header__container">
-      <div class="header___left">
-        <h1> Welcome to Wayne's Wealth</h1>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-          Blanditiis aspernatur placeat quia eos aperiam aliquam voluptate animi,
-          laudantium quas, aliquid mollitia, fugit amet reiciendis saepe obcaecati sed et? Culpa, molestiae.
-        </p>
-        <a href="learn.html" class="btn btn-primary">Get Started</a>
-        </div>
-        <div class="header__right">
-          <div class="header__right-image">
-            <img src="./images/Plant money.jpg" alt="Header.svg">
+  <main>
+    <header>
+      <div class="container header__container">
+          <div class="header__right">
+            <div class="header__right-image">
+              <img src="./images/Thinking2_edited.jpg" alt="Header.svg">
+            </div>
+          </div>
+          <div class="header___left">
+            <h1>Feel Like Giving Up In Life?</h1>
+            <h4>
+              What if we can still make all your dreams become a reality?
+            </h4>
+            <!-- <a href="learn.html" class="btn btn-primary">Get Started</a> -->
+            </div>
+      </div>
+    </header>
+    <header class="header">
+      <div class="container header__container">
+          <div class="header__right header__right2">
+            <div class="header__right-image">
+              <img src="./images/Money2.jpg" alt="Header.svg">
+            </div>
+          </div>
+          <div class="header___left header__left2">
+            <h1>Ever Wished To Make Money Without Stress?</h1>
+            <h4>
+              We help you acquire financial freedom right from your comfort zone.
+            </h4>
+            </div>
+      </div>
+    </header>
+    <section class="categories">
+      <div class="container categories__container">
+        <div class="categories__left">
+          <div class="cat-left">
+            <h1>Simplified & Easy Courses</h1>
+            <p>
+              Our courses empowers you and teaches you to be financially free by positioning  you with the right mindset, psychology and the right skill set needed to be consistently profitable off the financial markets          </p>
           </div>
         </div>
-    </div>
-  </header>
-  <section class="intros">
-    <div class="container intros__container">
+        <div class="categories__right">
+          <article class="category">
+            <span class="category-icon"><i class="uil uil-brain"></i></span>
+            <h5>Right Mindset</h5>
+            <p>
+              We position our students in the right mindset to be able to achieve the best
+            </p>
+          </article>
 
-    </div>
-  </section>
-  <section class="categories">
-    <div class="container categories__container">
-      <div class="categories__left">
-        <div class="cat-left">
-          <h1>Simplified & Easy Courses</h1>
-          <p>
-            Our courses empowers you and teaches you to be financially free by positioning  you with the right mindset, psychology and the right skill set needed to be consistently profitable off the financial markets          </p>
+          <article class="category">
+            <span class="category-icon"><i class="fal fa-head-side-brain"></i></span>
+            <h5>Right Psychology</h5>
+            <p>
+              Having the right mindset and the right psychology. Everything is possible.
+            </p>
+          </article>
+
+          <article class="category">
+            <span class="category-icon"><i class="fa-solid fa-business-time fas fa-medal"></i></span>
+            <h5>Right Skills</h5>
+            <p>
+              Providing you with the right skillset required to make money off the market.
+            </p>
+          </article>
+        </div>
+        <div class="container btn__container">
+          <span>
+            <a class="s-btn btn-start" href="login.html"><p>Get Started</p></a>
+          </span>
         </div>
       </div>
-      <div class="categories__right">
-        <article class="category">
-          <span class="category-icon"><i class="uil uil-brain"></i></span>
-          <h5>Right Mindset</h5>
-          <p>
-            We position our students in the right mindset to be able to achieve the best
-          </p>
-        </article>
-
-        <article class="category">
-          <span class="category-icon"><i class="fa-solid fa-head-side-virus"></i></span>
-          <h5>Right Psychology</h5>
-          <p>
-            Having the right mindset and the right psychology. Everything is possible.
-          </p>
-        </article>
-
-        <article class="category">
-          <span class="category-icon"><i class="fa-solid fa-business-time"></i></span>
-          <h5>Right Skills</h5>
-          <p>
-            Providing you with the right skillset required to make money off the market.
-          </p>
-        </article>
-      </div>
-    </div>
-  </section>
-
-
-  <footer class="footer">
-    <div class="container footer__container">
-      <div class="footer__1">
-        <a href="index.html">
-          <img class="logo" src="./images/logo-jpg.jpg" alt="logo">
-        </a>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, similique.
-        </p>
-      </div>
-
-      <div class="footer__2">
-        <h4>Permalinks</h4>
-        <ul class="permalinks">
-          <li><a href="learn.html">Learn</a></li>
-          <li><a href="features.html">Features</a></li>
-          <li><a href="stories.html">Stories</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="login.html">Sign-up</a></li>
-        </ul>
-      </div>
-
-      <div class="footer__3">
-        <h4>Privacy</h4>
-        <ul class="privacy">
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Tearms and Conditions</a></li>
-        </ul>
-      </div>
-
-      <div class="footer__4">
-        <h4>Contact Us</h4>
-        <div>
-          <p>+(233) 000 000 000</p>
-          <p>example@gmail.com</p>
+    </section>
+    <section class="categories">
+      <div class="second__section">
+        <div class="left">
+          <img src="./images/Debt.jpg" alt="">
         </div>
-        <ul class="footer__socials">
-          <li>
-            <a href="#"><i class="uil uil-facebook-f"></i></a>
-          </li>
-          <li>
-            <a href=" https://www.instagram.com/p/CRzJHj3lD"><i class="uil uil-instagram-alt"></i></a>
-          </li>
-          <li>
-            <a href="https://twitter.com/wayne_wealth/stat"><i class="uil uil-twitter"></i></a>
-          </li>
-          <li>
-            <a href="https://t.me/waynewealthForexSignals"><i class="uil uil-telegram"></i></a>
-          </li>
-          <li>
-            <a href="https://youtu.be/Kq0_El9eyxo"><i class="uil uil-youtube"></i></a>
-          </li>
-          <li>
-            <a href="https://www.snapchat.com/add/obedwayne18?share_id=g850bre4NR0&locale=en-GB"><i class="uil uil-snapchat"></i></a>
-          </li>
-        </ul>
+        <div class="right">
+          <h5>Seriously Stacked in Debt?</h5>
+          <p>
+            Worry not!, We have the key to free you from our debt.
+          </p>
+        </div>
       </div>
-    </div>
 
-    <div class="footer__copyright">
-      <small>Copyright &copy; 2023 - Wayne's Wealth Forex Group</small>
-    </div>
-  </footer>
+      <div class="second__section middle-sec">
+        <div class="left">
+          <img src="./images/Tired.jpg" alt="">
+        </div>
+        <div class="right">
+          <h5>Fed Up, Tired Or Hate Your Job?</h5>
+          <p>
+            Yes!, You can quit and we can make you get paid right from your confort zone.
+          </p>
+        </div>
+      </div>
+
+      <div class="second__section">
+        <div class="left">
+          <img src="./images/Travel1.jpg" alt="">
+        </div>
+        <div class="right">
+          <h5>Is Your Goal To Travel The World?</h5>
+          <p>
+            Only financial freedom can make you and we got you on that.
+          </p>
+        </div>
+      </div>
+      <div class="container btn__container">
+        <span>
+          <a class="s-btn btn-start1" href="login.html"><p>Get Started</p></a>
+        </span>
+      </div>
+    </section>
+    <section class="about-us__container">
+      <div class="about-us">
+        <article class="about">
+          <div class="category-icon1">
+            <span>
+              <i class="fal fa-comments-alt"></i>
+            </span>
+          </div>
+          <div class="abt-msg">
+            <h1>What Others Are Saying...</h1>
+            <p>
+              Learning the ways of the market is a way to fulfill the goals of financial liberty.
+            </p>
+          </div>
+        </article>
+      </div>
+      <div class="testimony-box">
+        <div class="profile">
+          <img src="./images/avatar1.jpg" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex consequuntur asperiores doloribus quisquam maiores impedit aliquid sequi odit nisi fugit?</p>
+          <div class="details">
+            <h6>George Handerson</h6>
+            <p class="prof">writer</p>
+          </div>
+        </div>
+        <div class="profile">
+          <img src="./images/avatar2.jpg" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro architecto qui ipsam molestias quibusdam rerum soluta excepturi fugiat error rem!.</p>
+          <div class="details">
+            <h6>Mary Jane</h6>
+            <p class="prof">Singer</p>
+          </div>
+        </div>
+        <div class="profile">
+          <img src="./images/avatar3.jpg" alt="">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, ad laborum optio consectetur odio autem quod voluptatibus porro illo debitis. Magni ipsam quam, doloremque quis similique accusamus fugiat illum maiores!</p>
+          <div class="details">
+            <h6>Harry Potter</h6>
+            <p class="prof">Lecturer</p>
+          </div>
+        </div>
+        <div class="profile">
+          <img src="./images/avatar4.jpg" alt="">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, ad laborum optio consectetur odio autem quod voluptatibus porro illo debitis. Magni ipsam quam, doloremque quis similique accusamus fugiat illum maiores!</p>
+          <div class="details">
+            <h6>Grace Rosemond</h6>
+            <p class="prof">Blogger</p>
+          </div>
+        </div>
+        <div class="profile">
+          <img src="./images/avatar5.jpg" alt="">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, ad laborum optio consectetur odio autem quod voluptatibus porro illo debitis. Magni ipsam quam, doloremque quis similique accusamus fugiat illum maiores!</p>
+          <div class="details">
+            <h6>Richard Walker</h6>
+            <p class="prof">Developer</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container footer__container">
+        <div class="footer__1">
+          <a href="index.html">
+            <img class="logo" src="./images/logo-jpg.jpg" alt="logo">
+          </a>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, similique.
+          </p>
+        </div>
+
+        <div class="footer__2">
+          <h4>Permalinks</h4>
+          <ul class="permalinks">
+            <li><a href="learn.html">Learn</a></li>
+            <li><a href="features.html">Features</a></li>
+            <li><a href="stories.html">Stories</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="login.html">Sign-up</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__3">
+          <h4>Privacy</h4>
+          <ul class="privacy">
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Tearms and Conditions</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__4">
+          <h4>Contact Us</h4>
+          <div>
+            <p>+(233) 000 000 000</p>
+            <p>example@gmail.com</p>
+          </div>
+          <ul class="footer__socials">
+            <li>
+              <a href="#"><i class="uil uil-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href=" https://www.instagram.com/p/CRzJHj3lD"><i class="uil uil-instagram-alt"></i></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/wayne_wealth/stat"><i class="uil uil-twitter"></i></a>
+            </li>
+            <li>
+              <a href="https://t.me/waynewealthForexSignals"><i class="uil uil-telegram"></i></a>
+            </li>
+            <li>
+              <a href="https://youtu.be/Kq0_El9eyxo"><i class="uil uil-youtube"></i></a>
+            </li>
+            <li>
+              <a href="https://www.snapchat.com/add/obedwayne18?share_id=g850bre4NR0&locale=en-GB"><i class="uil uil-snapchat"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="footer__copyright">
+        <small>Copyright &copy; 2023 - Wayne's Wealth Forex Group</small>
+      </div>
+    </footer>
+  </main>
 
 
   <script src="./js/main.js"></script>
